# ax-eval

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  ARENA_SEPARATION_PLAN.md  AX_EVAL_ARENA_MIGRATION.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTES.md  NOTICE  README.md  SECURITY.md  SKILL.md  ax-testing-discussion-log.md  package-lock.json  package.json  plan.md  product-spec.md  pyproject.toml  skill-spec.md  tsconfig.json  tsconfig.test.json  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  arena-release-gate-lib.mjs  prepare-record-fixture.mjs  verify-arena-release-gate.mjs  verify-import-boundaries.mjs  verify-package-contents.mjs
docs/: AXARENA_PLAN.md  ax-testing-discussion-log.md  axarena_methodology.md  implementation-notes.md  industry-landscape-report.md  plan.md  product-spec.md  technical-assessment.md
examples/: README.md  asana-cross-harness-cross-surface.html  exa-cross-harness-cross-surface.html  linear-graphql-cross-surface-cross-harness.html  notion-four-surface-cross-harness.html  stripe-four-surface-cross-harness.html
packs/: asana.yaml
results/: last-run.json
schemas/: evaluation-cell.v1.json  normalized-cell-record.v1.json  normalized-result.v1.json
src/: arena-compatibility-map.json  arena-launcher.ts  automation.ts  cli.ts  config.ts  constants.ts  dotted.ts  index.ts  mcp-server.ts  oracles.ts  report-style.ts  reporting.ts  runner.ts  schemas.ts  storage.ts
targets/: README.md
tests/: arena-launcher.test.ts  arena-release-gate.test.ts  artifact-path.test.ts  artifact-yaml.test.ts  authoring.test.ts  (+122 more)
(+493 files in other folders)
