[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ax-eval"
version = "0.0.1"
description = "AX eval — test whether AI agents can complete real tasks against a SaaS product, across harnesses."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
ax-eval = "ax_eval.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ax_eval"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
